--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="signin-container">
-      <form>
+      <form action = "/users/createSession" method="POST">
         <h2>Sign In</h2>
         <div class="form-group">
           <label for="email" class ="label-spacing">Email:</label>
