--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title>Sign In</title>
-    <link rel="stylesheet" type="text/css" href="/css/signIn.css">
-  </head>
-  <body>
+    <head>
+        <title>
+            Sign-in
+        </title>
+        <link rel="stylesheet" type="text/css" href="/css/signIn.css"> 
+    </head>
+    <body>
+
     <div class="signin-container">
       <form action = "/users/createSession" method="POST">
         <h2>Sign In</h2>
@@ -29,5 +31,5 @@
         </div>
       </form>
     </div>
-  </body>
+</body>
 </html>
