--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title>Sign In</title>
-    <link rel="stylesheet" type="text/css" href="/css/signUp.css">
-  </head>
-  <body>
+    <head>
+        <title>
+            Sign-in
+        </title>
+        <link rel="stylesheet" type="text/css" href="/css/signUp.css"> 
+    </head>
+    <body>
+
     <div class="container">
         <form action = "/users/createUser" method="POST">
           <h2>Sign Up</h2>
@@ -30,4 +32,4 @@
         </form>
       </div>      
   </body>
-</html>
+ </html>
