added create incident schema and view

--- a/assets/css/partials.css
+++ b/assets/css/partials.css
@@ -1,116 +1,69 @@
-body{
-    margin : 0;
-}
-
-#bar{
-    height: 8vh;
-    width : 100vw;
-    border : 5px solid black;
-    display : flex;
-    flex-direction: row;
-    background-image:linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
-}
-#aside-div{
-    height : 92vh;
-    width : 100vw;
-    border : 1px solid black;
-    display : flex;
-    flex-direction: row;
-}
-#left-div{
-    height: inherit;
-    width: 20%;
-    border : 1px solid black;
-}
- #right-div{
-    height: inherit;
-    width : 80%;
-    border : 1px solid black;
- }
-
- #bar-heading{
-    border : 1px solid black;
-    height: inherit;
-    width: 90%;
-    text-align: center;
-    
- }
- #bar-heading-name{
-    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-    color: white;
-    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
- }
- #sign-out{
-    height: inherit;
-    width: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
- }
-
- .route-button{
-    height : 50px;
-    width: 100%;
-    background-image:linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
-    border-radius: 5px;
-    box-sizing: border-box;
-    margin: 1px;
-    border : none;
-    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    color: white;
-    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-}
-
- .route-button :hover {
-    box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-    transition-duration: .1s;
-}
-
-.sign-out-button{
-    border : 1px solid white;
-    color : white;
-    margin : 10px;
-}
-
-#info-container, #form-info{
-    height: inherit;
-    width: 100%;
-    /* border : 1px solid black; */
-    /* margin : 3px; */
-}
-
-#incident-info, #incident-comment, #incident-button{
+.heading-bar {
+    display: flex; /* use flexbox layout to position the elements */
+    align-items: center; /* center the elements vertically */
+    background-color: #3d2dce; /* set a background color for the heading bar */
+    height: 50px; /* set a fixed height for the heading bar */
+    color: #f2f2f2;
+  }
+  
+  .heading-bar-title {
+    flex: 1; /* take up all available space */
+    text-align: center; /* center the text */
+    font-size: 20px; /* set the font size for the title */
+    font-weight: bold; /* make the title bold */
+    padding-left: 10px; /* add some padding to the title */
+    padding-right: 10px; /* add some padding to the title */
+  }
+  
+  .heading-bar-signout {
+    text-align: right; /* align the sign out button to the right */
+    padding-right: 10px; /* add some padding to the sign out button */
+  }
+  
+  .signout-button {
+    background-color: #ff6347; /* set a background color for the button */
+    color: white; /* set the text color for the button */
+    border: none; /* remove the border */
+    padding: 10px 15px; /* add some padding to the button */
+    cursor: pointer; /* add a cursor on hover */
+    border-radius: 4px; /* rounded border */
+  }
+  
+  .main-div {
+    display: flex; /* use flex layout */
+    flex-direction: row; /* arrange the child elements in a row */
+    height: 100%; /* set the main div to have a 100% height */
     width : 100%;
+}
+
+.left-div {
+    width: 20%; /* set the width to 25% */
+    height: 100%; /* set the height to 100% */
+    background-color: #f2f2f2; /* add background color for visualization */
     border : 1px solid black;
-    margin : 1px;
-}
-#incident-info{
-    height: 65%;
-    display: flex;
-    flex-direction: row;
+    display : flex;
+    flex-direction: column;
 }
 
-#incident-comment{
-    height : 10%;
+.right-div {
+    width: 70%; /* set the width to 75% */
+    height: 100%; /* set the height to 100% */
+    background-color: #f2f2f2; /* add background color for visualization */
+    /* border : 5px solid red; */
+    margin-left : 15px;
+    margin-top : 5px;
 }
 
-#incident-button{
-    height : 10%;
-    text-align: center;
-}
-
-#employee-info, #incident-state-info{
-    height: 100%;
-    width : 50%;
-    border: 1px solid black;
-}
-
-.incident-button{
-    width : 20%;
-    /* add margin according */
-    margin-top : 10px;
-}
+.button-style {
+    background-color: #3d2dce; /* Green background color */
+    color: white; /* White text color */
+    padding: 15px 32px; /* Padding for the button */
+    text-align: center; /* Center the text inside the button */
+    text-decoration: none; /* Remove the underline from the text */
+    display: inline-block; /* Display the button as an inline-block element */
+    font-size: 16px; /* Set the font size for the text */
+    margin: 1px; /* Add some margins for spacing */
+    cursor: pointer; /* Add a cursor on hover */
+    border-radius: 4px; /* rounded border */
+    width : 100%;
+  }
