--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,9 +15,9 @@
         <%- include("_partials"); %>
 
         <!-- partial of a page render here -->
-        <main id = "content-body">
+        <!-- <main id = "content-body">
             <%- body %>
-        </main>
+        </main> -->
         
         
         <!-- rendering the script tag for scripting as per requirement -->
@@ -25,3 +25,4 @@
     
     </body>
 </html>
+
