--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,8 +1,8 @@
 body{
     margin : 0;
-    text-align: center;
 }
 
-#content-body{
+/* #content-body{
     height : 100%;
-}
+    border: 1px solid red;
+} */
