--- a/views/incident_details.ejs
+++ b/views/incident_details.ejs
@@ -14,63 +14,68 @@
     </tr>
   
     <tr>
-      <td class="left-column">Incident Id</td>
-      <td id="incident-state-data"></td>
+      <td class="left-column">Incident Number</td>
+      <td id="incident-number-data"><%= incidentNumber %></td>
     </tr>
 
     <tr>
       <td class="left-column">Incident state</td>
-      <td id="incident-state-data"></td>
+      <td id="incident-state-data"><%= incident_state %></td>
     </tr>
 
     <tr>
       <td class="left-column">Date/ time of occurrence</td>
-      <td id="occurrence-date-data"></td>
+      <td id="occurrence-date-data"><%= date_of_occurrence %></td>
     </tr>
 
     <tr>
-      <td class="left-column">Appointment Time</td>
-      <td id="appointment-time-data"></td>
+      <td class="left-column">Start Time</td>
+      <td id="start-time-data"><%=start_time %></td>
+    </tr>
+
+    <tr>
+      <td class="left-column">End Time</td>
+      <td id="end-time-data"><%=end_time %></td>
     </tr>
 
     <tr>
       <td class="left-column">Priority</td>
-      <td id="priority-data"></td>
+      <td id="priority-data"><%= priority%></td>
     </tr>
 
     <tr>
       <td class="left-column">Issue related to</td>
-      <td id="issue-related-data"></td>
+      <td id="issue-related-data"><%= issue_related_to %></td>
     </tr>
 
     <tr>
       <td class="left-column">Affected Module</td>
-      <td id="affected-module-data"></td>
+      <td id="affected-module-data"><%= %></td>
     </tr>
 
     <tr>
       <td class="left-column">Impacted count</td>
-      <td id="impacted-count-data"></td>
+      <td id="impacted-count-data"><%= impacted_count %></td>
     </tr>
 
     <tr>
       <td class="left-column">Solution Group</td>
-      <td id="solution-group-data"></td>
+      <td id="solution-group-data"><%= solution_group %></td>
     </tr>
 
     <tr>
       <td class="left-column">Employee id/Owner</td>
-      <td id="empid-data"></td>
+      <td id="empid-data"><%= employee_id %></td>
     </tr>
 
     <tr>
       <td class="left-column">Follow up by</td>
-      <td id="follow-up-name-data"></td>
+      <td id="follow-up-name-data"><%= follow_up_by %></td>
     </tr>
 
     <tr>
       <td class="left-column">Additional Comment</td>
-      <td id="additional-comment-data"></td>
+      <td id="additional-comment-data"><%= additional_comment %></td>
     </tr>
 
   </table>
@@ -78,3 +83,4 @@
 
 </body>
 </html>
+
