created Incident feild is done, and details are rendered rproperly

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,9 +7,9 @@
           <div class="form-group">
             <label for="incident-state" class ="label-name">Incident state:</label>
             <select id="incident-state" name="incident_state">
-              <option value="open">Open</option>
+              <option value="Open">Open</option>
               <option value="On-hold">On Hold</option>
-              <option value="closed">Closed</option>
+              <option value="Closed">Closed</option>
             </select>
           </div>
   
@@ -21,19 +21,19 @@
           <div class="form-group">
             <label for="issue-type" class ="label-name">Issue related to:</label>
             <select id="issue-type" name="issue_related_to">
-              <option value="platefomr">Plateform</option>
-              <option value="service">Service</option>
-              <option value="teaching">Teaching</option>
-              <option value="teaching-assistance">TA</option>
+              <option value="Plateform">Plateform</option>
+              <option value="Service">Service</option>
+              <option value="Teaching">Teaching</option>
+              <option value="Teaching-Assistance">TA</option>
             </select>
           </div>
           
           <div class="form-group">
             <label for="priority" class ="label-name">Priority:</label>
             <select id="priority" name="priority">
-              <option value="high">High</option>
-              <option value="medium">Medium</option>
-              <option value="low">Low</option>
+              <option value="High">High</option>
+              <option value="Medium">Medium</option>
+              <option value="Low">Low</option>
             </select>
           </div>
   
@@ -45,9 +45,9 @@
           <div class="form-group" id = "solution-input">
             <label for="solution-group" class ="label-name" >Solution Group:</label>
             <select id="solution-group" name="solution_group">
-                <option value="plateform-team">Plateform Team</option>
-                <option value="service-team">Service Team</option>
-                <option value="teaching-team">Teaching Team</option>
+                <option value="Plateform-team">Plateform Team</option>
+                <option value="Service-team">Service Team</option>
+                <option value="Teaching-team">Teaching Team</option>
             </select>
           </div>
 
@@ -83,7 +83,7 @@
           
           <div class="form-group">
             <label for="affected-module" class ="label-name">Affected Module:</label>
-            <textarea id="affected-module" name="affected-module"></textarea>
+            <textarea id="affected-module" name="affected_module"></textarea>
           </div>
   
           <div class="form-group" id = "attachment-input">
