added all incident list to view

--- a/views/_partials.ejs
+++ b/views/_partials.ejs
@@ -8,7 +8,7 @@
       <div class="main-div">
         <div class="left-div">
             <span class = "aside-button">
-                <a href="#">
+                <a href="/">
                     <button class="button-style">Create Incident</button>
                 </a>
             </span>
@@ -18,7 +18,7 @@
                 </a>
             </span>
             <span class = "aside-button">
-                <a href="#">
+                <a href="/incidents/show-all-incident">
                     <button class="button-style">All Incident</button>
                 </a>
             </span>
