--- a/views/home.ejs
+++ b/views/home.ejs
@@ -96,14 +96,10 @@
       </div>
 
       <div class = "form-button">
-
-          <div class="form-group form-button-group">
-            <button type="button" id="check-details">Check Details</button>
-          </div>
-          
+   
           <div class="form-group form-button-group" id="create-button-input">
             <a href="/incidents/create-incident">
-              <button type="submit" id="create-incident">Create Incident</button>
+              <button type="submit" id="create-incident-button">Create</button>
             </a>
           </div>
 
