--- a/assets/css/incident_details.css
+++ b/assets/css/incident_details.css
@@ -1,12 +1,13 @@
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 70%;
+    width: 100%;
+    height: 80%;
   }
   
   td, th {
     border: 1px solid #dddddd;
-    text-align: left;
+    text-align: center;
     padding: 8px;
     height: 30px;
   }
@@ -16,11 +17,31 @@ table {
   }
   
   .left-column{
-    width : 30%;
+    width: 40%;
+    padding-right: 10px;
   }
-  
+
   .table-heading{
     text-align: center;
     font-size: large;
     font-weight: bold;
   }
+ #edit-incident-button{
+  display : flex;
+  justify-content: center;
+  text-align: center;
+  margin-top : 30px;
+  height: 40px;
+  width : 100%;
+  /* border : 1px solid black; */
+ }
+
+ .edit-button{
+  height: 100%;
+  width : 150%;
+  background: rgb(47,79,79);
+  border-radius: 25px;
+  box-shadow: rgb(47,79,79) 0 10px 20px -10px;
+  color : white;
+  
+ }
