--- a/assets/css/all_incident.css
+++ b/assets/css/all_incident.css
@@ -1,3 +1,27 @@
+#all-incident-list{
+  overflow-y: scroll;
+  min-height: 300px;
+  max-height: 655px;
+  width:100%;
+  border : 3px solid red;
+}
+#search-incident-section{
+  display : flex;
+  flex-direction: row;
+  border : 1px solid black;
+  height : 80px;
+  align-items: center;
+  justify-content: center;
+}
+#search-input-section{
+  height: 60%;
+  width : 25%;
+}
+.search-button{
+  height: 60%;
+  width: 15%;
+  
+}
 .search-result-bar {
     background-color: white;
     padding: 10px;
