--- a/assets/css/signIn.css
+++ b/assets/css/signIn.css
@@ -21,7 +21,7 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px #ccc;
-    margin-top : 10%;
+    /* margin-top : 10%; */
   }
   
   /* Form Styles */
