--- a/assets/css/signUp.css
+++ b/assets/css/signUp.css
@@ -11,6 +11,7 @@
     background-image: url('/images/b1.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
+    
   }
   
   /* Container Styles */
@@ -21,7 +22,7 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px #ccc;
-    margin-top : 10%;
+    /* margin-top : 10%; */
   }
   
   /* Form Styles */
