--- a/views/mailers/newIncident.ejs
+++ b/views/mailers/newIncident.ejs
@@ -1,9 +1,170 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Incident Management system</title>
+    <style>
+        #mail_heading{
+            height: 60px;
+            width : 100%;
+            /* border : 1px solid black; */
+            display : flex;
+            justify-content: center;
+            align-content: center;
+        }
+        
+        #mail_heading_text{
+        
+            /* border : 1px solid black; */
+            margin-top: 16px;
+            font-family: 'Open Sans', sans-serif;
+            font-size: 20px; 
+            font-weight: bold;
+            padding-left: 10px;
+            padding-right: 10px;
+            
+        }
+        
+        #mail-body{
+            /* border : 1px solid red; */
+            height: 90vh;
+            width: 100%;
+            margin : 5px;
+        }
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+            height: 80%;
+        }
+        
+        td, th {
+            border: 1px solid #dddddd;
+            text-align: center;
+            padding: 8px;
+            height: 30px;
+        }
+        
+        th {
+            background-color: #dddddd;
+        }
+        
+        .left-column{
+            width: 40%;
+            padding-right: 10px;
+        }
 
-<link rel="stylesheet" href="/css/node_mailer.css">
+        .table-heading{
+            text-align: center;
+            font-size: large;
+            font-weight: bold;
+        }
+        #edit-incident-button{
+        display : flex;
+        justify-content: center;
+        text-align: center;
+        margin-top : 30px;
+        height: 40px;
+        width : 100%;
+        /* border : 1px solid black; */
+        }
 
+        .edit-button{
+        height: 100%;
+        width : 150%;
+        background: rgb(47,79,79);
+        border-radius: 25px;
+        box-shadow: rgb(47,79,79) 0 10px 20px -10px;
+        color : white;
+        
+        }
+
+    </style>
+    <!-- <link rel="stylesheet" href="/css/node_mailer.css"> -->
+</head>
+<body>
     <div id = "mail_heading">
         <p id ="mail_heading_text">New Incident has been Created</p>
     </div>
     <div id = "mail-body">    
-        <%- include("incident_details", {incident_document :incident_document}); %>
-  </div>
+        <!-- <link rel="stylesheet" href="/css/incident_details.css"> -->
+        <%const date = new Date(incident_document.date_of_occurrence).toISOString().slice(0,10);%>
+
+        <table id = "incident-details-table">
+            
+            <tr>
+            <th colspan="2" class = "table-heading">Incident Details</th>
+            </tr>
+        
+            <tr> 
+                <td class="left-column">Incident Number</td>  
+                <td id="incident-number-data"><%= incident_document.incidentNumber %></td>
+            </tr>
+
+            <tr>
+            <td class="left-column">Incident state</td>
+            <td id="incident-state-data"><%= incident_document.incident_state %></td>
+            </tr>
+
+            <tr>
+            <td class="left-column">Date/ time of occurrence</td>
+            <td id="occurrence-date-data"><%= date %></td>
+            </tr>
+
+            <tr>
+            <td class="left-column">Start Time</td>
+            <td id="start-time-data"><%=incident_document.start_time %></td>
+            </tr>
+
+            <tr>
+            <td class="left-column">End Time</td>
+            <td id="end-time-data"><%=incident_document.end_time %></td>
+            </tr>
+
+            <tr>
+            <td class="left-column">Priority</td>
+            <td id="priority-data"><%= incident_document.priority%></td>
+            </tr>
+
+            <tr>
+            <td class="left-column">Issue related to</td>
+            <td id="issue-related-data"><%= incident_document.issue_related_to %></td>
+            </tr>
+
+            <tr>
+            <td class="left-column">Affected Module</td>
+            <td id="affected-module-data"><%= incident_document.affected_module%></td>
+            </tr>
+
+            <tr>
+            <td class="left-column">Impacted count</td>
+            <td id="impacted-count-data"><%= incident_document.impacted_count %></td>
+            </tr>
+
+            <tr>
+            <td class="left-column">Solution Group</td>
+            <td id="solution-group-data"><%= incident_document.solution_group %></td>
+            </tr>
+
+            <tr>
+            <td class="left-column">Employee id/Owner</td>
+            <td id="empid-data"><%= incident_document.employee_id %></td>
+            </tr>
+
+            <tr>
+            <td class="left-column">Follow up by</td>
+            <td id="follow-up-name-data"><%= incident_document.follow_up_by %></td>
+            </tr>
+
+            <tr>
+            <td class="left-column">Additional Comment</td>
+            <td id="additional-comment-data"><%= incident_document.additional_comment %></td>
+            </tr>
+
+        </table>
+        
+   </div>
+</body>
+</html>
+
+
+   
